--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "dtt-assignment",
   "version": "1.0.0",
   "description": "DTT Assignment",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "nodemon main.js",
+    "dev": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
